--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <a href="#about" class="text-gray-600 hover:text-blue-900 font-medium">About the Event</a>
                 <a href="#tickets" class="text-gray-600 hover:text-blue-900 font-medium">Tickets</a>
                 <a href="#sponsors" class="text-gray-600 hover:text-blue-900 font-medium">Sponsor</a>
-                <a href="#contact" class="bg-teal-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-teal-700 transition-colors">Get Tickets</a>
+                <a href="https://www.zeffy.com/en-US/ticketing/valley-wide-50-year-anniversary-gala" target="_blank" rel="noopener noreferrer" class="bg-teal-600 text-white font-bold py-2 px-4 rounded-lg hover:bg-teal-700 transition-colors">Get Tickets</a>
             </div>
             <!-- Mobile Menu Button (simple) -->
             <div class="md:hidden">
@@ -52,7 +52,7 @@
             <a href="#about" class="block text-gray-600 hover:text-blue-900 font-medium">About the Event</a>
             <a href="#tickets" class="block text-gray-600 hover:text-blue-900 font-medium">Tickets</a>
             <a href="#sponsors" class="block text-gray-600 hover:text-blue-900 font-medium">Sponsor</a>
-            <a href="#contact" class="block bg-teal-600 text-white text-center font-bold py-2 px-4 rounded-lg hover:bg-teal-700 transition-colors">Get Tickets</a>
+            <a href="https://www.zeffy.com/en-US/ticketing/valley-wide-50-year-anniversary-gala" target="_blank" rel="noopener noreferrer" class="block bg-teal-600 text-white text-center font-bold py-2 px-4 rounded-lg hover:bg-teal-700 transition-colors">Get Tickets</a>
         </div>
     </header>
 
@@ -88,7 +88,7 @@
             </div>
             
             <div class="mt-12">
-                <a href="#tickets" class="bg-teal-600 text-white font-bold py-4 px-10 text-lg rounded-lg hover:bg-teal-700 transition-colors shadow-lg">Get Tickets Now</a>
+                <a href="https://www.zeffy.com/en-US/ticketing/valley-wide-50-year-anniversary-gala" target="_blank" rel="noopener noreferrer" class="bg-teal-600 text-white font-bold py-4 px-10 text-lg rounded-lg hover:bg-teal-700 transition-colors shadow-lg">Get Tickets Now</a>
             </div>
         </div>
     </section>
@@ -139,7 +139,7 @@
                         <p class="mt-6 text-gray-700">Provides an accessible entry point for community members and supporters to join the celebration.</p>
                     </div>
                     <div class="p-6 bg-gray-50 rounded-b-lg">
-                        <a href="#contact" class="block w-full text-center bg-blue-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">Buy Now</a>
+                        <a href="https://www.zeffy.com/en-US/ticketing/valley-wide-50-year-anniversary-gala" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-blue-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">Buy Now</a>
                     </div>
                 </div>
 
@@ -153,7 +153,7 @@
                         <p class="mt-6 text-gray-700">Includes the fair market value of the event plus a <strong class="font-semibold">$100 tax-deductible donation</strong> to the Valley-Wide Foundation.</p>
                     </div>
                     <div class="p-6 bg-gray-50 rounded-b-lg">
-                        <a href="#contact" class="block w-full text-center bg-teal-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-teal-700 transition-colors">Buy Patron Ticket</a>
+                        <a href="https://www.zeffy.com/en-US/ticketing/valley-wide-50-year-anniversary-gala" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-teal-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-teal-700 transition-colors">Buy Patron Ticket</a>
                     </div>
                 </div>
 
@@ -166,7 +166,7 @@
                         <p class="mt-6 text-gray-700">A perfect way for your business or group to bring your team and guarantee seating together. Includes a "Table Host" listing in the program.</p>
                     </div>
                     <div class="p-6 bg-gray-50 rounded-b-lg">
-                        <a href="#contact" class="block w-full text-center bg-blue-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">Host a Table</a>
+                        <a href="https://www.zeffy.com/en-US/ticketing/valley-wide-50-year-anniversary-gala" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-blue-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">Host a Table</a>
                     </div>
                 </div>
             </div>
@@ -199,7 +199,7 @@
                         </ul>
                     </div>
                     <div class="p-6 bg-gray-50 rounded-b-lg">
-                        <a href="#contact" class="block w-full text-center bg-teal-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-teal-700 transition-colors">Become the Legacy Sponsor</a>
+                        <a href="https://www.zeffy.com/en-US/ticketing/valley-wide-50-year-anniversary-gala" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-teal-600 text-white font-bold py-3 px-6 rounded-lg hover:bg-teal-700 transition-colors">Become the Legacy Sponsor</a>
                     </div>
                 </div>
 
@@ -217,7 +217,7 @@
                         </ul>
                     </div>
                     <div class="p-6 bg-gray-50 rounded-b-lg">
-                        <a href="#contact" class="block w-full text-center bg-blue-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">Become a Heritage Sponsor</a>
+                        <a href="https://www.zeffy.com/en-US/ticketing/valley-wide-50-year-anniversary-gala" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-blue-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">Become a Heritage Sponsor</a>
                     </div>
                 </div>
 
@@ -234,7 +234,7 @@
                         </ul>
                     </div>
                     <div class="p-6 bg-gray-50 rounded-b-lg">
-                        <a href="#contact" class="block w-full text-center bg-blue-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">Become a Keystone Sponsor</a>
+                        <a href="https://www.zeffy.com/en-US/ticketing/valley-wide-50-year-anniversary-gala" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-blue-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">Become a Keystone Sponsor</a>
                     </div>
                 </div>
 
@@ -251,7 +251,7 @@
                         </ul>
                     </div>
                     <div class="p-6 bg-gray-50 rounded-b-lg">
-                        <a href="#contact" class="block w-full text-center bg-blue-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">Become a Valley Partner</a>
+                        <a href="https://www.zeffy.com/en-US/ticketing/valley-wide-50-year-anniversary-gala" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-blue-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">Become a Valley Partner</a>
                     </div>
                 </div>
 
@@ -268,7 +268,7 @@
                         </ul>
                     </div>
                     <div class="p-6 bg-gray-50 rounded-b-lg">
-                        <a href="#contact" class="block w-full text-center bg-blue-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">Become a Friend</a>
+                        <a href="https://www.zeffy.com/en-US/ticketing/valley-wide-50-year-anniversary-gala" target="_blank" rel="noopener noreferrer" class="block w-full text-center bg-blue-800 text-white font-bold py-3 px-6 rounded-lg hover:bg-blue-700 transition-colors">Become a Friend</a>
                     </div>
                 </div>
 
