--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                     <div class="flex items-center justify-center space-x-2 mt-4 md:mt-0">
                         <svg class="w-6 h-6 text-teal-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M5.05 4.05a7 7 0 119.9 9.9L10 18.9l-4.95-4.95a7 7 0 010-9.9zM10 11a2 2 0 100-4 2 2 0 000 4z" clip-rule="evenodd"></path></svg>
-                        <span class="font-semibold">The Alamosa Event Center</span>
+                        <span class="font-semibold">The Ski Hi Event Center</span>
                     </div>
                     <div class="flex items-center justify-center space-x-2 mt-4 md:mt-0">
                         <svg class="w-6 h-6 text-teal-300" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M10 18a8 8 0 100-16 8 8 0 000 16zm1-12a1 1 0 10-2 0v4a1 1 0 00.293.707l2.828 2.829a1 1 0 101.415-1.415L11 9.586V6z" clip-rule="evenodd"></path></svg>
@@ -285,4 +285,5 @@
     </script>
 
 </body>
+
 </html>
