--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                 <!-- Yellow Brick Road General Admission -->
                 <div class="bg-white rounded-lg shadow-xl border border-gray-200 flex flex-col">
                     <div class="p-8 flex-grow">
-                        <h3 class="text-2xl font-bold text-blue-900">General Admission</h3>
+                        <h3 class="text-2xl font-bold text-blue-900">Yellow Brick Road General Admission</h3>
                         <p class="mt-4 text-4xl font-extrabold text-gray-900">$50</p>
                         <p class="mt-4 text-gray-600">Per person</p>
                         <p class="mt-6 text-gray-700">Provides an accessible entry point for community members and younger professionals interested in the mission.</p>
@@ -160,7 +160,7 @@
                 <!-- Ozdust Ballroom Host -->
                 <div class="bg-white rounded-lg shadow-xl border border-gray-200 flex flex-col">
                     <div class="p-8 flex-grow">
-                        <h3 class="text-2xl font-bold text-blue-900">Half-Table Host</h3>
+                        <h3 class="text-2xl font-bold text-blue-900">Ozdust Ballroom Host</h3>
                         <p class="mt-4 text-4xl font-extrabold text-gray-900">$300</p>
                         <p class="mt-4 text-gray-600">Reserved table for 4</p>
                         <p class="mt-6 text-gray-700">Includes a reserved table for 4 people, "Table Host" listing in the program, and table signage. An easy way for a small business to bring its team.</p>
@@ -186,7 +186,7 @@
                 <!-- Defying Gravity Sponsor -->
                 <div class="bg-white rounded-lg shadow-2xl border-2 border-teal-500 flex flex-col">
                     <div class="p-8 flex-grow">
-                        <h3 class="text-xl font-bold text-teal-700 tracking-wider uppercase">The "Legacy" Presenting Sponsor</h3>
+                        <h3 class="text-xl font-bold text-teal-700 tracking-wider uppercase">Defying Gravity Sponsor</h3>
                         <p class="mt-2 text-4xl font-extrabold text-gray-900">$3,000</p>
                         <p class="mt-1 text-sm font-semibold text-gray-600">(Limit 1-2)</p>
                         <p class="mt-4 italic text-sm text-gray-600">"The Valley-Wide Health Systems 50th Anniversary Gala, Presented by [Sponsor Name]."</p>
@@ -208,7 +208,7 @@
                 <!-- Popular! Preferred Sponsor -->
                 <div class="bg-white rounded-lg shadow-xl border border-gray-200 flex flex-col">
                     <div class="p-8 flex-grow">
-                        <h3 class="text-xl font-bold text-blue-900 tracking-wider uppercase">The "Community Keystone" Sponsor</h3>
+                        <h3 class="text-xl font-bold text-blue-900 tracking-wider uppercase">Popular! Preferred Sponsor</h3>
                         <p class="mt-2 text-4xl font-extrabold text-gray-900">$1,500</p>
                         <ul class="mt-8 space-y-3 text-gray-700">
                             <li class="flex"><span class="perk-item">Four gala tickets (half-table)</span></li>
@@ -226,7 +226,7 @@
                 <!-- Emerald City Sponsor -->
                 <div class="bg-white rounded-lg shadow-lg border border-gray-200 flex flex-col">
                     <div class="p-8 flex-grow">
-                        <h3 class="text-xl font-bold text-blue-900 tracking-wider uppercase">"Friend of Valley-Wide" Sponsor</h3>
+                        <h3 class="text-xl font-bold text-blue-900 tracking-wider uppercase">Emerald City Sponsor</h3>
                         <p class="mt-2 text-4xl font-extrabold text-gray-900">$500</p>
                         <ul class="mt-8 space-y-3 text-gray-700">
                             <li class="flex"><span class="perk-item">Two gala tickets</span></li>
@@ -323,4 +323,5 @@
 
 </body>
 </html>
+
 
