--- a/index.html
+++ b/index.html
@@ -375,6 +375,9 @@
                         <a href="https://vwhsorg.sharepoint.com/:w:/s/FundDevelopmentCommittee/EagggpPUZpNLvqMZTupQWnkBNuAADv2lsnSxX-oAtaqqeA?e=eedDgn" class="hover:text-white transition-colors" target="_blank">Brick Fundraiser</a>
                         <a href="https://vwhsorg.sharepoint.com/:w:/s/FundDevelopmentCommittee/EYT-dY_UzwNDpo_OyOT8o4YBYq_2ee08CuRrHn7pyp94Ug?e=HAFmih" class="hover:text-white transition-colors" target="_blank">Sponsor Tiers</a>
                         <a href="https://vwhsorg.sharepoint.com/:w:/s/FundDevelopmentCommittee/Ededt3tsG4xBo1rZR9LB2HMBCGiLE8S6g4yhKkRECwB6PQ?e=QXJrEP" class="hover:text-white transition-colors" target="_blank">Fundraising Notes</a>
+                        <a href="https://vwhsorg.sharepoint.com/:w:/s/FundDevelopmentCommittee/EUolXWL9uSNAm0OVyP9VsY0B9beS5y3dLdct4zXhAhZtog?e=TZFGeQ" class="hover:text-white transition-colors" target="_blank">CEO Letter</a>
+                        <a href="https://vwhsorg.sharepoint.com/:w:/s/FundDevelopmentCommittee/IQAMr_tVk0rWRpFtMPeZ6wMCAXIfW92PVR7wcOVhOEM9ZQE?e=YcO27a" class="hover:text-white transition-colors" target="_blank">Auction Letter</a>
+                        <a href="https://vwhsorg-my.sharepoint.com/:x:/g/personal/shottsc_valley-widehealth_org/EZ0KQsNpU5VJusDB8g-98xYBnaH0v1l8uVrb58U0yki-bA?e=4cg5CT" class="hover:text-white transition-colors" target="_blank">Budget Template</a>
                         <a href="https://vwhsorg.sharepoint.com/:x:/s/FundDevelopmentCommittee/IQDOclpyu304SapXXa1nvIl2ATrYiSYzwm-bO72nGR3343U?e=cBXAT6" class="hover:text-white transition-colors" target="_blank">Event Schedule</a>
                     </div>
                 </div>
