--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <!-- Preferred Sponsor -->
                 <div class="bg-white rounded-lg shadow-xl border border-emerald-100 flex flex-col hover:shadow-2xl transition-shadow duration-300 group">
                     <div class="bg-emerald-700 p-6 rounded-t-lg text-white">
-                        <h3 class="text-xl font-bold font-serif tracking-wider">Ruby Slipper</h3>
+                        <h3 class="text-xl font-bold font-serif tracking-wider">Popular!</h3>
                         <p class="text-3xl font-black mt-2 text-emerald-200">$1,500</p>
                         <p class="text-xs text-emerald-200 uppercase mt-1">Preferred Sponsor</p>
                     </div>
@@ -401,3 +401,4 @@
 
 </body>
 </html>
+
